arm_controller_ik_exps/log/build_2020-12-16_07-52-15/robot_ikr/stdout_stderr.log
running egg_info
writing ..\..\build\robot_ikr\robot_ikr.egg-info\PKG-INFO
writing dependency_links to ..\..\build\robot_ikr\robot_ikr.egg-info\dependency_links.txt
writing entry points to ..\..\build\robot_ikr\robot_ikr.egg-info\entry_points.txt
writing requirements to ..\..\build\robot_ikr\robot_ikr.egg-info\requires.txt
writing top-level names to ..\..\build\robot_ikr\robot_ikr.egg-info\top_level.txt
reading manifest file '..\..\build\robot_ikr\robot_ikr.egg-info\SOURCES.txt'
writing manifest file '..\..\build\robot_ikr\robot_ikr.egg-info\SOURCES.txt'
running build
running build_py
copying robot_ikr\robot_control.py -> D:\arm_controller_code\arm_controller_ik_exps\build\robot_ikr\build\lib\robot_ikr
running install
running install_lib
copying D:\arm_controller_code\arm_controller_ik_exps\build\robot_ikr\build\lib\robot_ikr\robot_control.py -> D:\arm_controller_code\arm_controller_ik_exps\install\robot_ikr\Lib\site-packages\robot_ikr
byte-compiling D:\arm_controller_code\arm_controller_ik_exps\install\robot_ikr\Lib\site-packages\robot_ikr\robot_control.py to robot_control.cpython-37.pyc
running install_data
running install_egg_info
removing 'D:\arm_controller_code\arm_controller_ik_exps\install\robot_ikr\Lib\site-packages\robot_ikr-0.0.0-py3.7.egg-info' (and everything under it)
Copying ..\..\build\robot_ikr\robot_ikr.egg-info to D:\arm_controller_code\arm_controller_ik_exps\install\robot_ikr\Lib\site-packages\robot_ikr-0.0.0-py3.7.egg-info
running install_scripts
Installing robot_control-script.py script to D:\arm_controller_code\arm_controller_ik_exps\install\robot_ikr\lib\robot_ikr
Installing robot_control.exe script to D:\arm_controller_code\arm_controller_ik_exps\install\robot_ikr\lib\robot_ikr
writing list of installed files to 'D:\arm_controller_code\arm_controller_ik_exps\build\robot_ikr\install.log'
  File "D:\arm_controller_code\arm_controller_ik_exps\install\robot_ikr\Lib\site-packages\robot_ikr\robot_control.py", line 56
    global angle_data,h,w,
                         ^
SyntaxError: invalid syntax

